# memtrace

./: Cargo.toml  README.md  build.rs
src/: flamegraph.rs  main.rs
