[package]
name = "memgraph"
version = "0.1.0"
edition = "2021"

[dependencies]
inferno = "0.12.0"
anyhow = "1.0"
clap = "4.5"
open = "5.3"

[dependencies.common]
path = "../memtrack-rs/common"

[dependencies.interpret]
path = "../memtrack-rs/interpret"

[dependencies.memtrack]
path = "../memtrack-rs"