[package]
name = "memtrace"
version = "0.1.2"
edition = "2024"
homepage = "https://github.com/blkmlk/memtrace"
license = "MIT"
description = "A CLI tool for generation heap consumption flamegraphs"
keywords = ["heap", "memory", "profile", "trace", "flamegraph"]
categories = ["os"]
repository = "https://github.com/blkmlk/memtrace"

[dependencies]
inferno = "0.12.0"
anyhow = "1.0"
clap = "4.5"
open = "5.3"
memtrace-utils = "0.4.0"